# avsocks

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  avauth.hpp  avsession.hpp  avsocks-vc2005.sln  avsocks-vc2005.vcproj  avsocks-vc2012.sln  avsocks-vc2012.vcxproj  avsocks.kdev4  avsocks.service  avsocks.socket  cert.hpp  gfwlist.hpp  icon.rc  main.cpp  newsocks.service  newsocks.socket  org.avplayer.avsocks.plist  pch.hpp  sd-daemon.c  session.cpp  session.h  socks_server.cpp  socks_server.h  splice.hpp  ui.hpp
cmake/: Findsystemd.cmake
src/: avsession.hpp  gfwlist.hpp  main.cpp  sd-daemon.c  sd-daemon.h  splice.hpp
